[package]
name = "relayer"
version = "0.1.0"
authors = ["Sam Wilson <sam.wilson@consensys.net>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
educe = "0.4.12"
serde_json = "1.0.56"
snafu = "0.6.8"
tokio = { version = "0.2.22", features = ["macros", "rt-core", "sync"] }
shell-words = "1.0.0"
structopt = "0.3.16"
rustyline = { version = "6.2.0", default-features = false }

[dependencies.ethers]
git = "https://github.com/gakonst/ethers-rs"
rev = "6197d8bb1275b1630ffe055815784ac86bb5cbe9"

[dependencies.ethers-providers]
git = "https://github.com/gakonst/ethers-rs"
rev = "6197d8bb1275b1630ffe055815784ac86bb5cbe9"
features = ["tokio-tls"]

[build-dependencies.ethers-contract]
git = "https://github.com/gakonst/ethers-rs"
rev = "6197d8bb1275b1630ffe055815784ac86bb5cbe9"
features = ["abigen"]
